--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <div class="row">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-3 mt-4">
-                    <input type="text" class="form-control-lg one btn-block" id="firstName" placeholder="Enter First Name" name="firstName" required>
+                    <input type="text" class="form-control-lg one btn-outline-dark btn-block" id="firstName" placeholder="Enter First Name" name="firstName" required>
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
                 <div class="col-sm-3 mt-4">
-                    <input type="text" class="form-control-lg one btn-block" id="lastName" placeholder="Enter Last Name" name="lastName" required>
+                    <input type="text" class="form-control-lg one btn-outline-dark btn-block" id="lastName" placeholder="Enter Last Name" name="lastName" required>
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
@@ -45,7 +45,7 @@
             <div class="row">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-6">
-                    <input type="text" class="form-control-lg one btn-block mt-4" id="email" placeholder="Enter email" name="email" required>
+                    <input type="text" class="form-control-lg one  btn-outline-dark btn-block mt-4" id="email" placeholder="Enter email" name="email" required>
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
@@ -54,14 +54,14 @@
             <div class="row">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-3">
-                    <select class="form-control-lg btn-block one mt-4" id="sel1">
+                    <select class="form-control-lg btn-block btn-outline-dark one mt-4" id="sel1">
                         <option>Male</option>
                         <option>Female</option>
                         <option>Others</option>
                       </select>
                 </div>
                 <div class="col-sm-3">
-                    <input type="date" class="form-control-lg one btn-block mt-4" id="birthday" placeholder="Enter birthday" name="birthday" required>
+                    <input type="date" class="form-control-lg btn-outline-dark one btn-block mt-4" id="birthday" placeholder="Enter birthday" name="birthday" required>
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-6">
-                    <input type="password" class="form-control-lg one btn-block mt-4 " placeholder="Enter password" id="pwd" required>
+                    <input type="password" class="form-control-lg btn-outline-dark one btn-block mt-4 " placeholder="Enter password" id="pwd" required>
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
