--- a/index.html
+++ b/index.html
@@ -29,59 +29,59 @@
         
         <form action="/action_page.php" class="needs-validation" novalidate>
             <div class="row">
-                <div class="col-sm-3"></div>
-                <div class="col-sm-3 mt-4">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-3 mt-4">
                     <input type="text" class="form-control-lg one btn-outline-dark btn-block" id="firstName" placeholder="Enter First Name" name="firstName" required>
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
-                <div class="col-sm-3 mt-4">
+                <div class="col-lg-3 mt-4">
                     <input type="text" class="form-control-lg one btn-outline-dark btn-block" id="lastName" placeholder="Enter Last Name" name="lastName" required>
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
-                <div class="col-sm-3"></div>
+                <div class="col-lg-3"></div>
             </div>
             <div class="row">
-                <div class="col-sm-3"></div>
-                <div class="col-sm-6">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6">
                     <input type="text" class="form-control-lg one  btn-outline-dark btn-block mt-4" id="email" placeholder="Enter email" name="email" required>
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
-                <div class="col-sm-3"></div>
+                <div class="col-lg-3"></div>
             </div>
             <div class="row">
-                <div class="col-sm-3"></div>
-                <div class="col-sm-3">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-3">
                     <select class="form-control-lg btn-block btn-outline-dark one mt-4" id="sel1">
                         <option>Male</option>
                         <option>Female</option>
                         <option>Others</option>
                       </select>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-lg-3">
                     <input type="date" class="form-control-lg btn-outline-dark one btn-block mt-4" id="birthday" placeholder="Enter birthday" name="birthday" required>
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
-                <div class="col-sm-3"></div>
+                <div class="col-lg-3"></div>
             </div>
             <div class="row">
-                <div class="col-sm-3"></div>
-                <div class="col-sm-6">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6">
                     <input type="password" class="form-control-lg btn-outline-dark one btn-block mt-4 " placeholder="Enter password" id="pwd" required>
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
-                <div class="col-sm-3"></div>
+                <div class="col-lg-3"></div>
             </div>
             <div class="row">
-                <div class="col-sm-3"></div>
-                <div class="col-sm-6">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6">
                     <button type="submit" class="btn btn-primary  btn-block mt-4 pt-3"><h5>Submit</h5></button>
                 </div>
-                <div class="col-sm-3"></div>
+                <div class="col-lg-3"></div>
             </div>
         </div>
         <div class="lower"></div>
