--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                       </select>
                 </div>
                 <div class="col-lg-3" placeholder="Enter birthday">
-                    <input type="date" onfocus="(this.type='date')"  class="form-control-lg btn-outline-dark one btn-block mt-4" id="birthday" placeholder="Enter birthday" name="birthday" required>
+                    <input type="text" placeholder="Enter Birthday"
+                    onfocus="(this.type='date')" class="form-control-lg btn-outline-dark one btn-block mt-4" >
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
