--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                       </select>
                 </div>
                 <div class="col-lg-3" placeholder="Enter birthday">
-                    <input type="text" placeholder="Enter Birthday"
+                    <input type="date" placeholder="Enter Birthday"
                     onfocus="(this.type='date')" class="form-control-lg btn-outline-dark one btn-block mt-4" >
                     <div class="valid-feedback">Valid.</div>
                     <div class="invalid-feedback">Please fill out this field.</div>
